Prevent submission if a tweet is empty or too long. Provide a flash message for submitting invalid tweet and styling it.

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -22,3 +22,13 @@
 .new-tweet .error {
   color: red;
 }
+
+.new-tweet.invalid {
+  border-radius: 5px;
+  border: 2px solid #FF0000;
+  background-color: #FF7575;
+  color: white;
+  font-size: 20px;
+  margin: 0px 2em;
+  padding: 10px;
+}
